@@ -417,8 +417,7 @@ public abstract class SuperController {
 
         var organisationMinimalInfoResponses =
                 organisations.stream()
-                        .map(organisation -> new OrganisationMinimalInfoResponse(organisation, address))
-                        .collect(Collectors.toList());
+                        .map(organisation -> new OrganisationMinimalInfoResponse(organisation, address)).toList();
 
         return ResponseEntity.status(200).body(organisationMinimalInfoResponses);
     }
